<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/movie_title"
            android:textColor="@color/white"
            android:background="@color/background"/>
        <ImageView
            android:id="@+id/iV_detail_poster"
            android:layout_width="135dp"
            android:layout_height="225dp"
            android:layout_margin="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tv_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:layout_marginLeft="32dp"
            app:layout_constraintTop_toTopOf="@+id/iV_detail_poster"
            app:layout_constraintLeft_toRightOf="@+id/iV_detail_poster"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_date_label"
            android:textColor="@color/background"
            android:text="@string/date_default" />
        <TextView
            android:id="@+id/tv_vote_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_date"
            app:layout_constraintLeft_toLeftOf="@+id/tv_date_label"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_detail_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_date_label"
            android:textColor="@color/background"
            android:text="@string/default_vote"/>

        <TextView
            android:id="@+id/fav_inst"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="Mark Favourite"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_vote"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/cb_detail_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_star"
            app:layout_constraintLeft_toLeftOf="@+id/tv_date_label"
            app:layout_constraintTop_toBottomOf="@+id/fav_inst"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent" />


        <TextView
            android:id="@+id/tv_overview_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/iV_detail_poster"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/overview_label"/>
        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textColor="@color/background"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/default_overview"/>

        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/tv_overview_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview"
            android:text="Trailers"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_detail_overview"
            app:layout_constraintRight_toRightOf="@+id/tv_detail_overview"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"/>

        <TextView
            android:id="@+id/tv_comments_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:text="Reviews"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
            app:layout_constraintLeft_toLeftOf="@+id/tv_overview_label"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_comments_label"
            app:layout_constraintRight_toRightOf="@+id/tv_comments_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_comments_label"/>
        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_title"
            app:layout_constraintRight_toRightOf="@+id/tv_detail_title"
            android:layout_marginRight="16dp"
            android:src="@android:drawable/ic_menu_share"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>